[gd_scene load_steps=11 format=3 uid="uid://bsidnoah2sb7k"]

[ext_resource type="TileSet" uid="uid://ccueodkpc20v0" path="res://Scenes/Levels/tileset.tres" id="1_ym8u2"]
[ext_resource type="PackedScene" uid="uid://daeg63xk7vl8b" path="res://Scenes/Elements/button.tscn" id="2_8y3va"]
[ext_resource type="Script" path="res://Scenes/Elements/button.gd" id="3_3cm2y"]
[ext_resource type="PackedScene" uid="uid://dkhprb0xddxw7" path="res://Scenes/Elements/switch.tscn" id="4_kbfdj"]
[ext_resource type="Script" path="res://Scenes/Elements/switch2.gd" id="5_bfrwu"]
[ext_resource type="PackedScene" uid="uid://ce1xtd52ueli8" path="res://Scenes/Elements/door.tscn" id="6_b0y1k"]
[ext_resource type="PackedScene" uid="uid://b778xkb5j2vy3" path="res://Scenes/People/player.tscn" id="7_a0gce"]
[ext_resource type="PackedScene" uid="uid://c4d7hon2iwllk" path="res://Scenes/Elements/box.tscn" id="8_7qypr"]

[sub_resource type="GDScript" id="GDScript_qpntu"]
script/source = "extends Node2D

@export var scenePath = \"res://Scenes/Levels/Tutorial2/tutorial2.tscn\"

func _on_area_2d_body_entered(body): # ----- Changes Level
	get_tree().change_scene_to_file(scenePath)
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o7dxe"]
size = Vector2(51, 281)

[node name="Tutorial3" type="Node2D"]
script = SubResource("GDScript_qpntu")
scenePath = "res://Scenes/Levels/Tutorial4/tutorial4.tscn"

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = ExtResource("1_ym8u2")
format = 2
layer_0/tile_data = PackedInt32Array(0, 65537, 1, 65536, 65537, 1, 131072, 65537, 1, 196608, 65537, 1, 262144, 65537, 1, 327680, 65537, 1, 393216, 65537, 1, 458752, 65537, 1, 524288, 65537, 1, 589824, 65537, 1, 655360, 65537, 1, 720896, 65537, 1, 1, 65537, 1, 65537, 65537, 1, 131073, 65537, 1, 196609, 65537, 1, 262145, 65537, 1, 327681, 65537, 1, 393217, 65537, 1, 458753, 65537, 1, 524289, 65537, 1, 589825, 65537, 1, 655361, 65537, 1, 720897, 65537, 1, 6, 65537, 1, 7, 65537, 1, 8, 65537, 1, 9, 65537, 1, 10, 65537, 1, 11, 65537, 1, 12, 65537, 1, 13, 65537, 1, 14, 65537, 1, 15, 65537, 1, 19, 65537, 1, 18, 65537, 1, 17, 65537, 1, 16, 65537, 1, 655362, 65537, 1, 655363, 65537, 1, 655364, 65537, 1, 655365, 65537, 1, 65542, 65537, 2, 655366, 65537, 1, 65543, 65537, 2, 655367, 65537, 1, 65544, 65537, 2, 655368, 65537, 1, 65545, 65537, 2, 655369, 65537, 1, 65546, 65537, 2, 655370, 65537, 1, 65547, 196609, 3, 655371, 65537, 1, 65548, 196609, 1, 655372, 65537, 1, 65549, 65537, 2, 655373, 65537, 1, 65550, 65537, 2, 655374, 65537, 1, 65551, 65537, 2, 655375, 65537, 1, 65552, 65537, 2, 655376, 65537, 1, 65553, 65537, 2, 655377, 65537, 1, 65554, 65537, 2, 655378, 65537, 1, 65555, 196609, 3, 131091, 1, 1, 196627, 1, 2, 524307, 1, 1, 589843, 196609, 0, 655379, 65537, 1, 589830, 65537, 0, 589831, 65537, 0, 589832, 65537, 0, 589833, 65537, 0, 589834, 65537, 0, 589835, 196609, 0, 589836, 196609, 2, 589837, 65537, 0, 589838, 65537, 0, 589839, 65537, 0, 589840, 65537, 0, 589841, 65537, 0, 589842, 65537, 0, 458771, 1, 0, 720898, 65537, 1, 720899, 65537, 1, 720910, 65537, 1, 720911, 65537, 1, 720912, 65537, 1, 720913, 65537, 1, 720914, 65537, 1, 720915, 65537, 1, 720909, 65537, 1, 720908, 65537, 1, 720907, 65537, 1, 720906, 65537, 1, 720905, 65537, 1, 720904, 65537, 1, 720903, 65537, 1, 720902, 65537, 1, 720901, 65537, 1, 720900, 65537, 1, 4, 65537, 1, 65540, 196609, 1, 589828, 196609, 2, 5, 65537, 1, 65541, 65537, 2, 589829, 65537, 0, 131076, 131073, 1, 196612, 131073, 1, 262148, 131073, 1, 327684, 131073, 1, 393220, 131073, 1, 458756, 131073, 1, 524292, 131073, 1, 3, 65537, 1, 2, 65537, 1, 65538, 65537, 1, 131074, 65537, 1, 131075, 65537, 1, 65539, 65537, 1, 196610, 65537, 1, 262146, 65537, 1, 327682, 65537, 1, 393218, 65537, 1, 458754, 65537, 1, 262147, 65537, 1, 196611, 65537, 1, 327683, 65537, 1, 393219, 65537, 1, 458755, 65537, 1, 524291, 65537, 1, 589827, 65537, 1, 524290, 65537, 1, 589826, 65537, 1, 196619, 1, 2, 196620, 131073, 2, 458763, 1, 0, 458764, 131073, 0, 524299, 1, 1, 524300, 131073, 1, 131084, 131073, 1, 131083, 1, 1)

[node name="Button" parent="." instance=ExtResource("2_8y3va")]
position = Vector2(1723, 794)
collision_layer = 5
collision_mask = 5
script = ExtResource("3_3cm2y")
doorCount = 1

[node name="Switch" parent="." instance=ExtResource("4_kbfdj")]
position = Vector2(1056, 340)
script = ExtResource("5_bfrwu")

[node name="Door" parent="." instance=ExtResource("6_b0y1k")]
position = Vector2(1155, 528)
scale = Vector2(1, 14.4)
exact = true

[node name="Door2" parent="." instance=ExtResource("6_b0y1k")]
position = Vector2(1874, 528)
scale = Vector2(1, 14.4)
requiredAmount = 2

[node name="Player" parent="." instance=ExtResource("7_a0gce")]
position = Vector2(625, 541)

[node name="Box" parent="." instance=ExtResource("8_7qypr")]
position = Vector2(1629, 596)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1947, 527.5)
shape = SubResource("RectangleShape2D_o7dxe")

[connection signal="body_entered" from="Button" to="Button" method="_on_body_entered"]
[connection signal="body_exited" from="Button" to="Button" method="_on_body_exited"]
[connection signal="body_entered" from="Switch" to="Switch" method="_on_body_entered"]
[connection signal="body_exited" from="Switch" to="Switch" method="_on_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
